# irish-census-mcp

./: .gitignore  1901_1911_CENSUS.md  1926_CENSUS.md  MCP_ARCHITECTURE.md  PRE_FAMINE_CENSUS.md  README.md  fastmcp.json  pyproject.toml
.github/workflows/: publish.yml
src/irish_census_mcp/: __init__.py  __main__.py  api.py  bmd.py  gateway.py  matching.py  normalize.py  places.py  server.py
tests/: test_bmd_smoke.py  test_live_smoke.py  test_walkthrough.py
