[project]
name = "irish-census-mcp"
version = "0.1.0"
description = "MCP server exposing the Irish National Archives census APIs (1821-1926) to LLM clients."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "David Markey", email = "david@dmarkey.com" },
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "rapidfuzz>=3.0",
]

[project.scripts]
irish-census-mcp = "irish_census_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/irish_census_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
